# egui_graphs

./: Cargo.toml
crates/LogMark/: Cargo.toml  Trunk.toml  build_wasm.sh  index.html
crates/LogMark/src/: app.rs  graph.rs  lib.rs  main.rs
crates/music-visualizer/: Cargo.toml
crates/music-visualizer-native/: Cargo.toml
crates/music-visualizer-native/src/: app.rs  audio_analysis.rs  main.rs  particle.rs  playlist.rs  ui.rs  unknown_pleasures.rs  visualizer_config.rs
crates/music-visualizer/src/: audio.rs  lib.rs  ui.rs  unknown_pleasures.rs
